[B]v1.0.7 (29.08.2012)[/B]
- Change: Language tag added to addon.xml.
- Change: Icon resized to 256x256 pixels.

[B]v1.0.6 (18.08.2012)[/B]
- Change: Description amended.

[B]v1.0.5 (03.08.2012)[/B]
- Change: Now additionally an audio add-on.

[B]v1.0.2 (09.02.2012)[/B]
- Change: endOfDirectory Success=yes/no and addDirectoryItem Folder=yes/no corrected

[B]v1.0.1 (31.01.2012)[/B]
- Change: Unescape HTML entities with HTMLParser().unescape(string)

[B]v1.0.0 (05.06.2011)[/B]
- Other: Initial release